After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 664336 - path: Fix introspection annotations
path: Fix introspection annotations
Status: RESOLVED FIXED
Product: clutter
Classification: Platform
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: clutter-maint
clutter-maint
Depends on:
Blocks:
 
 
Reported: 2011-11-18 14:30 UTC by Bastian Winkler
Modified: 2011-12-01 10:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
path: Fix introspection annotations (1.31 KB, patch)
2011-11-18 14:30 UTC, Bastian Winkler
committed Details | Review

Description Bastian Winkler 2011-11-18 14:30:14 UTC
Add out annotations for clutter_path_get_node() and
clutter_path_get_position()
Comment 1 Bastian Winkler 2011-11-18 14:30:16 UTC
Created attachment 201667 [details] [review]
path: Fix introspection annotations
Comment 2 Emmanuele Bassi (:ebassi) 2011-11-18 18:02:10 UTC
Review of attachment 201667 [details] [review]:

looks good to me.

for the future, feel free to commit introspection annotation fixes without a bug. :-)
Comment 3 Emmanuele Bassi (:ebassi) 2011-12-01 10:55:43 UTC
attachment 201667 [details] [review] pushed to master